new online test

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -259,6 +259,31 @@
     @apply flex absolute bg-body top-1/2 ltr:left-1.5 rtl:right-1.5 ltr:md:left-3 rtl:md:right-3 w-1.5 md:w-2;
   }
 
+  .border-red-500 {
+    animation: shake 0.3s ease-in-out;
+  }
+
+
+  @keyframes shake {
+
+    0%,
+    100% {
+      transform: translateX(0);
+    }
+
+    25% {
+      transform: translateX(-5px);
+    }
+
+    50% {
+      transform: translateX(5px);
+    }
+
+    75% {
+      transform: translateX(-5px);
+    }
+  }
+
   /* Hero Banner */
   @media (min-width: 1500px) {
     .heroBannerOne>div {
